[package]
name = "wobbly"
description = "wobbly-owned reference counting pointers that mostly behave like Weak but can also keep a value alive"
version = "0.1.1"
edition = "2021"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
documentation = "https://docs.rs/wobbly/"
homepage = "https://github.com/juntyr/wobbly"
repository = "https://github.com/juntyr/wobbly"
readme = "README.md"
keywords = ["arc", "rc", "weak", "reference-counting"]
license = "MIT OR Apache-2.0"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[package.metadata.docs.rs]
features = ["std"]
